openexr bug #45839

Closed
opened 2015-08-18 14:19:11 +02:00 by S S · 19 comments

System Information
win7 64bit, GTX650ti

Blender Version
Broken: 2.75a
Worked: 2.74

Short description of error
I used file output node set with openexr file type to output render layers and render passes . When I wanted to use these openexr file to composite, I found the image input node only showed one render layer.

Exact steps for others to reproduce the error
I had create a file named "bug", you can use this one to create a openexr file. I also created a file named "bug_1" with openexr file.
{F225064}bug_1.blend
1, open the bug_1 file, then use view node to check each output node of the image node. Only one render layer can show up and work. If open the bug_1 file with 2.74, every output node of the image node works.

**System Information** win7 64bit, GTX650ti **Blender Version** Broken: 2.75a Worked: 2.74 **Short description of error** I used file output node set with openexr file type to output render layers and render passes . When I wanted to use these openexr file to composite, I found the image input node only showed one render layer. **Exact steps for others to reproduce the error** I had create a file named "bug", you can use this one to create a openexr file. I also created a file named "bug_1" with openexr file. {[F225064](https://archive.blender.org/developer/F225064/bug.blend)}[bug_1.blend](https://archive.blender.org/developer/F225065/bug_1.blend) 1, open the bug_1 file, then use view node to check each output node of the image node. Only one render layer can show up and work. If open the bug_1 file with 2.74, every output node of the image node works.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @b1657022405

Added subscriber: @b1657022405

#46033 was marked as duplicate of this issue

#46033 was marked as duplicate of this issue

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne self-assigned this 2015-08-18 14:50:52 +02:00

Looks like this has been fixed already, please check with the latest build from our buildbot.

Looks like this has been fixed already, please check with the latest build from [our buildbot](https://builder.blender.org/download).
Author

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
S S reopened this issue 2015-08-19 14:32:01 +02:00
Author

I just test with 2.75-5668fc0, and the bug still exists.

I just test with 2.75-5668fc0, and the bug still exists.

Cannot reproduce here. Please attach here also the .exr file.

Cannot reproduce here. Please attach here also the .exr file.
Author

here is the exr file : 0001.exr

here is the exr file : ![0001.exr](https://archive.blender.org/developer/F225586/0001.exr)

Oh, OK, sorry, it’s me who did not understood correctly the issue…

Can confirm something is wrong here, either on writing or reading side, will check.

Oh, OK, sorry, it’s me who did not understood correctly the issue… Can confirm something is wrong here, either on writing or reading side, will check.
Bastien Montagne removed their assignment 2015-08-20 20:16:24 +02:00
Dalai Felinto was assigned by Bastien Montagne 2015-08-20 20:16:24 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

Caused by 479b6696, which removed iuser->pass index, leading to only select passes based on their view and type. This may work with pure-render result, but certainly not with random composite OpenEXR images. Thinks you need to re-introduce pass index here… @Sergey may also have some ideas?

Caused by 479b6696, which removed iuser->pass index, leading to only select passes based on their view and type. This may work with pure-render result, but certainly not with random composite OpenEXR images. Thinks you need to re-introduce pass index here… @Sergey may also have some ideas?

Setting to high because this should really be fixed before 2.76 imho.

Setting to high because this should **really** be fixed before 2.76 imho.

sigh yes I think pass index will have to be back

*sigh* yes I think pass index will have to be back

Proposed fix at D1504

Proposed fix at [D1504](https://archive.blender.org/developer/D1504)

Added subscriber: @GurayGursoy

Added subscriber: @GurayGursoy

This issue was referenced by 5317dc716e

This issue was referenced by 5317dc716e3e0123570674e4637342cbd5d9559b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45839
No description provided.